VO-3475 VO-3476 - Fixes for text overflow on Payments pages
Both translated languages had a "today" version of the text I was not seeing locally. This caused a longer string that needed to be shrunk down.
Also fixed various bugs in the translations for attributes with spaces (ng- bind, ng- click)

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -70,14 +70,25 @@ body.lang_es {
 
   /* Payments */
   #PaymentsPage {
+    .well-title {
+      .well-sub-title, a {
+        font-size: 13px;
+        margin-top: 6px;
+      }
+      button {
+        font-size: 14px;
+        margin-top: 6px;
+      }
+    }
+
     @media (max-width: 1150px) {
 
       .well-title {
-        font-size: 16px;
+        font-size: 15px;
 
         .well-sub-title, a {
-          font-size: 12px;
-          margin-top: 4px;
+          font-size: 12px !important;
+          margin-top: 4px !important;
         }
         button {
           font-size: 14px;
