--- a/app/styles/lang/_fr_CA.scss
+++ b/app/styles/lang/_fr_CA.scss
@@ -94,11 +94,11 @@ body.lang_fr_CA {
     @media (max-width: 1090px) {
 
       .well-title {
-        font-size: 16px;
+        font-size: 15px;
 
         .well-sub-title, a {
-          font-size: 13px;
-          margin-top: 2px;
+          font-size: 12px;
+          margin-top: 4px;
         }
         button {
           font-size: 14px;
